# python-pp

./: .gitignore  README.md  bayes_logistic.ipynb  bayes_logistic.py  bayesian_linear_regression.ipynb  bcrf_test_1.ipynb  bcrf_test_2.ipynb  blr.py  blr_1.py  blr_2.py  blr_3.ipynb  blr_3.py  blr_4.py  blr_5.py  integration.py  lreg.py  main.py  metropolis.py  ols.py  pp_diabetes.py  pyproject.toml  rejection.py  requirements.txt  sampling.py  testing.py
data/: turk_ner_20190716.txt
onto.bilou/: onto.test.ner
